Fix identifier tag from plalist selection view

--- a/ABRBetweenCodecsSpike/Base.lproj/Main.storyboard
+++ b/ABRBetweenCodecsSpike/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9UN-oB-dy4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9UN-oB-dy4">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -299,6 +298,52 @@
                                                 <constraint firstItem="dUD-Zv-MNQ" firstAttribute="leading" secondItem="wEb-6f-w2H" secondAttribute="leadingMargin" id="Lub-Zd-p1h"/>
                                                 <constraint firstItem="dUD-Zv-MNQ" firstAttribute="top" secondItem="wEb-6f-w2H" secondAttribute="topMargin" id="hLp-Ak-43D"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="dUD-Zv-MNQ" secondAttribute="trailing" id="jXc-vm-jgF"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="sG8-vG-sfv">
+                                        <rect key="frame" x="0.0" y="375.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sG8-vG-sfv" id="QLq-er-Woz">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpy-tc-UWO">
+                                                    <rect key="frame" x="16" y="11" width="343" height="22"/>
+                                                    <state key="normal" title="Frankenstine"/>
+                                                    <connections>
+                                                        <action selector="radioButtonTapped:" destination="mdj-ux-235" eventType="touchUpInside" id="6v6-qb-kpW"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="cpy-tc-UWO" firstAttribute="leading" secondItem="QLq-er-Woz" secondAttribute="leadingMargin" id="BMq-bj-qlz"/>
+                                                <constraint firstItem="cpy-tc-UWO" firstAttribute="top" secondItem="QLq-er-Woz" secondAttribute="topMargin" id="WeT-P9-QLr"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="cpy-tc-UWO" secondAttribute="trailing" id="XEy-hl-IMO"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="cpy-tc-UWO" secondAttribute="bottom" id="qny-7K-6s3"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="rj8-9F-hHS">
+                                        <rect key="frame" x="0.0" y="419.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rj8-9F-hHS" id="DkP-xv-5XS">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u4g-6r-CRT">
+                                                    <rect key="frame" x="16" y="11" width="343" height="22"/>
+                                                    <state key="normal" title="radio 3 breakfast"/>
+                                                    <connections>
+                                                        <action selector="radioButtonTapped:" destination="mdj-ux-235" eventType="touchUpInside" id="MK0-WL-7MQ"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="u4g-6r-CRT" firstAttribute="leading" secondItem="DkP-xv-5XS" secondAttribute="leadingMargin" id="EsO-rs-abC"/>
+                                                <constraint firstItem="u4g-6r-CRT" firstAttribute="top" secondItem="DkP-xv-5XS" secondAttribute="topMargin" id="Fzw-5a-424"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="u4g-6r-CRT" secondAttribute="bottom" id="GY7-f4-cIx"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="u4g-6r-CRT" secondAttribute="trailing" id="pZg-mf-fah"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
